<resources>
    <string name="app_name">Galaxy Store</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_woman">Woman</string>
    <string name="menu_man">Man</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_place">Place</string>

    <string name="edit_profile_picture">Change Profile Picture</string>
    <string name="my_profile">Profile</string>
    <string name="nama">Name</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Change Profile</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>

    <string name="input_your_first_name">Input Your First Name</string>
    <string name="input_your_last_name">Input Your Last Name</string>
    <string name="input_your_phone_number">Input Your Phone Number</string>
    <string name="input_your_email">Input Your Email</string>
    <string name="input_your_password">Input Your Password</string>

    <string name="cancel">Cancel</string>
    <string name="update_profile">Update</string>
    <string name="search">Search by name</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="haveAccount">Doesn\'t have an account ?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="start_navigation">start_navigation</string>
    <string name="mapbox_access_token">pk.eyJ1IjoibWVvbmciLCJhIjoiY2tmcXg2MmF4MDluYjJxb3gxdzM5NXBidCJ9.3_bCd0Au5-WxEu-FQH5PWA</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="male">Male</string>
    <string name="title_activity_check_out">CheckOut</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

</resources>
