<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="30dp"
        android:layout_gravity="center"
        tools:context="com.pbpkelompok3.shopping.LoginActivity">

        <TextView
            android:id="@+id/textView"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="30dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvLayoutEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:startIconDrawable="@drawable/ic_baseline_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEmailSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_your_email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPasswordSignin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_your_password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="25dp"
            android:text="@string/login" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/haveAccount"
            android:textColor="#000"
            android:backgroundTint="@android:color/transparent"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="12sp"/>
    </LinearLayout>
</ScrollView>